PLUGINWIZARD-51 : Refactoring to use MVC library
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@51613 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_attribute.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_attribute.html
@@ -4,7 +4,7 @@
 
     <div class="span3">             
         <@sidebar step="model" />
-        <div class="portlet-background-content">         
+        <div class="well">         
             #i18n{pluginwizard.pluginwizard_create_attribute.pageHelp}   
         </div>  
     </div>
@@ -54,10 +54,10 @@
                 </div>
 
                 <div class="form-actions">                                          
-                    <button type="submit" class="btn btn-primary">
+                    <button type="submit" name="action_createAttribue" class="btn btn-primary">
                         #i18n{pluginwizard.pluginwizard_create_attribute.buttonCreateAttribute}
                     </button>                    
-                    <button type="submit" name="goToModifyBusinessClass" class="btn">
+                    <button type="submit" name="view_modifyBusinessClass" class="btn">
                         #i18n{pluginwizard.pluginwizard_create_attribute.buttonBack}
                     </button>                                                             
                 </div>    
