--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin.html
@@ -3,7 +3,7 @@
 <div class="row">
     <div class="span3" > 
         <@sidebar step="creation" />
-        <div class="help-block">#i18n{pluginwizard.pluginwizard_create_plugin.pageHelp}</div>
+        <div class="well">#i18n{pluginwizard.pluginwizard_create_plugin.pageHelp}</div>
     </div>
 
     <div class="span8">
