--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin_description.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin_description.html
@@ -4,7 +4,7 @@
 
     <div class="span3">       
         <@sidebar step="description" />
-        <div class="help-block">
+        <div class="well">
             #i18n{pluginwizard.pluginwizard_create_plugin_description.pageHelp}
         </div>
     </div>
