--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_applications.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_applications.html
@@ -4,7 +4,7 @@
 
     <div class="span3">             
         <@sidebar step="xpage" />
-        <div class="portlet-background-content">         
+        <div class="well">         
             #i18n{pluginwizard.pluginwizard_manage_plugin_applications.pageHelp}   
         </div>  
     </div>
