--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_business_classes.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_business_classes.html
@@ -5,7 +5,7 @@
     <div class="span3">             
         <@sidebar step="model" />
 
-        <div class="portlet-background-content">      
+        <div class="well">      
             #i18n{pluginwizard.pluginwizard_manage_business_classes.pageHelp}
         </div>
     </div>
