--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_plugin_recapitulate.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_plugin_recapitulate.html
@@ -4,7 +4,7 @@
 
     <div class="span3">             
         <@sidebar step="generate" />
-        <div class="portlet-background-content">         
+        <div class="well">         
             #i18n{pluginwizard.pluginwizard_plugin_recapitulate.pageHelp} 
         </div>  
     </div>
