--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_admin_feature.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_admin_feature.html
@@ -4,7 +4,7 @@
 
     <div class="span3">             
         <@sidebar step="administration" />
-        <div class="portlet-background-content">         
+        <div class="well">         
             #i18n{pluginwizard.pluginwizard_create_admin_feature.pageHelp}      
         </div>  
     </div>
