--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_business_class.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_business_class.html
@@ -4,7 +4,8 @@
 
     <div class="span3">             
         <@sidebar step="model" />
-        <div class="portlet-background-content">         #i18n{pluginwizard.pluginwizard_create_business_class.pageHelp}   
+        <div class="well">
+            #i18n{pluginwizard.pluginwizard_create_business_class.pageHelp}   
         </div>  
     </div>
 
