PLUGINWIZARD-51 : Refactoring to use MVC library - work in progress
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@51626 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/message_confirmation.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/message_confirmation.html
@@ -3,17 +3,17 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">${messageBox.title}</h4>
+                    <h4 class="modal-title">#i18n{portal.util.message.titleConfirmation}</h4>
                 </div>
                 <div class="modal-body">
                     ${messageBox.message}
                 </div>
                 <div class="modal-footer">
                     <a href="${messageBox.urlButton1}" class="btn btn-primary" >
-                        ${messageBox.labelButton1}
+                        #i18n{portal.util.labelYes}
                     </a>
                     <a href="${messageBox.urlButton2}" class="btn btn-default" >
-                        ${messageBox.labelButton2}
+                        #i18n{portal.util.labelCancel}
                     </a>
                 </div>
             </div>
