--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin_description.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin_description.html
@@ -43,7 +43,7 @@
                 <div class="control-group">
                     <label class="control-label" >#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginVersion} : </label>       
                     <div class="controls">
-                        <input class="input-small" type="text" name="version"  value="${plugin_version_number}" size="30" />
+                        <input class="input-small" type="text" name="plugin_version"  value="${plugin_version_number}" size="30" />
                     </div>                                                                              
                 </div>
 
