--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_business_classes.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_business_classes.html
@@ -43,11 +43,11 @@
                     <td>${business_class.businessTableName}</td>
 
                     <td>
-                        <a href="jsp/site/Portal.jsp?page=pluginwizard&action=modify_business_class&plugin_id=${plugin_id}&feature_id=${business_class.idFeature}&business_class_id=${business_class.id}" 
+                        <a href="jsp/site/Portal.jsp?page=pluginwizard&view=modifyBusinessClass&feature_id=${business_class.idFeature}&business_class_id=${business_class.id}" 
                            class="btn btn-primary btn-small" title="#i18n{pluginwizard.pluginwizard_manage_plugin_admin_features.buttonModifyFeature}" >
                             <i class="icon-edit icon-white"></i>
                         </a>
-                        <a href="jsp/site/Portal.jsp?page=pluginwizard&action=remove_business_class&plugin_id=${plugin_id}&feature_id=${business_class.idFeature}&business_class_id=${business_class.id}" 
+                        <a href="jsp/site/Portal.jsp?page=pluginwizard&action=confirmRemoveBusinessClass&feature_id=${business_class.idFeature}&business_class_id=${business_class.id}" 
                            class="btn btn-danger btn-small" title="#i18n{pluginwizard.pluginwizard_manage_plugin_admin_features.buttonRemoveFeature}" >
                             <i class="icon-trash icon-white"></i>
                         </a>
