--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_plugin.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_plugin.html
@@ -11,6 +11,8 @@
             <fieldset>
                 <legend>#i18n{pluginwizard.pluginwizard_modify_plugin.pageTitle}</legend>
 
+                <#include "errors_handler.html" />
+
                 <input type="hidden" name="page" value="pluginwizard" />
                 <input type="hidden" name="action" value="do_create_plugin" />
 
