--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_portlet.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_portlet.html
@@ -16,9 +16,9 @@
                 <legend>#i18n{pluginwizard.pluginwizard_modify_portlet.pageTitle}</legend>
 
                 <input type="hidden" name="page" value="pluginwizard" />
-                <input type="hidden" name="action" value="do_modify_portlet" />
-                <input type="hidden" name="plugin_id" value="${portlet.idPlugin}" />
-                <input type="hidden" name="portlet_id" value="${portlet.id}" />  
+                <input type="hidden" name="id" value="${portlet.id}" />  
+
+                <#include "errors_handler.html" />
 
                 <div class="control-group">
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_modify_portlet.labelPortletClass} :</label>
