--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_admin_feature.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_admin_feature.html
@@ -15,6 +15,8 @@
                 <legend>#i18n{pluginwizard.pluginwizard_create_admin_feature.pageTitle}</legend>                           
                 <input type="hidden" name="page" value="pluginwizard" />                         
 
+                 <#include "errors_handler.html" />
+
                 <div class="control-group">
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_create_admin_feature.labelFeatureTitle} : </label>                
                     <div class="controls">      
