--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_business_class.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_business_class.html
@@ -12,28 +12,30 @@
     <div class="span8">
 
         <form class="form-horizontal" method="post" action="jsp/site/Portal.jsp" >                    
+            <input type="hidden" name="page" value="pluginwizard" />        
             <fieldset>
                 <legend>#i18n{pluginwizard.pluginwizard_create_business_class.pageTitle}</legend>
 
-                <input type="hidden" name="page" value="pluginwizard" />        
-                <div class="control-group">
+                 <#include "errors_handler.html" />
+
+                 <div class="control-group">
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_create_business_class.labelBusinessClass} *:</label>      
                     <div class="controls">    
-                        <input type="text" name="class" value="" size="30" />      
+                        <input type="text" name="business_class" value="" size="30" />      
                     </div>  
                 </div>
 
                 <div class="control-group">
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_create_business_class.labelBusinessTableName} *:</label>      
                     <div class="controls">
-                        <input class="input-xlarge" type="text" name="table" value="${plugin_model.pluginName}_" size="30" />      
+                        <input class="input-xlarge" type="text" name="business_table_name" value="${plugin_model.pluginName}_" size="30" />      
                     </div>  
                 </div>
 
                 <div class="control-group">
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_create_business_class.labelAdminFeatures} : </label>      
                     <div class="controls">       
-                        <@comboWithParams name="feature_id" default_value="all" items=combo_admin_features additionalParameters="class=\"input-xlarge\""/>      
+                        <@comboWithParams name="id_feature" default_value="all" items=combo_admin_features additionalParameters="class=\"input-xlarge\""/>      
                     </div>  
                 </div>
  
