--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_admin_feature.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_admin_feature.html
@@ -18,7 +18,9 @@
                 <input type="hidden" name="page" value="pluginwizard" />                     
                 <input type="hidden" name="id" value="${feature.id}" />   
 
-                <div class="control-group">
+                 <#include "errors_handler.html" />
+
+                 <div class="control-group">
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelFeatureTitle} : </label>                           
                     <div class="controls">                                                                                               
                         <input class="input-xlarge" type="text" name="feature_title" value="${feature.featureTitle}" />                                                                      
