--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_application.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_application.html
@@ -13,12 +13,12 @@
         <form class="form form-horizontal" method="post" action="jsp/site/Portal.jsp" >       
             <fieldset>
                 <legend>#i18n{pluginwizard.pluginwizard_modify_application.pageTitle}</legend>
-                <input type="hidden" name="page" value="wizard" />                
-                <input type="hidden" name="action" value="do_modify_application" />                
-                <input type="hidden" name="plugin_id" value="${plugin_model.idPlugin}" />                   
-                <input type="hidden" name="application_id" value="${application.id}" />                                            
+                <input type="hidden" name="page" value="pluginwizard" />                
+                <input type="hidden" name="id" value="${application.id}" />                                            
 
-                <div class="control-group">
+                 <#include "errors_handler.html" />
+
+                 <div class="control-group">
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_modify_application.labelApplicationName} :</label>  
                     <div class="controls">                 
                         <input type="text" name="application_name" value="${application.applicationName}" size="30" />  
@@ -31,8 +31,12 @@
                     </div>     
                 </div>
                 <div class="form-actions">                                         
-                    <button type="submit" class="btn btn-primary">#i18n{pluginwizard.pluginwizard_modify_application.buttonModifyApplication}</button>                    
-                    <button type="submit" name="goToManagePluginApplications" class="btn">#i18n{pluginwizard.pluginwizard_modify_application.buttonBack}</button>	
+                    <button type="submit" name="action_modifyApplication"class="btn btn-primary">
+                        #i18n{pluginwizard.pluginwizard_modify_application.buttonModifyApplication}
+                    </button>                    
+                    <button type="submit" name="view_manageApplications" class="btn">
+                        #i18n{pluginwizard.pluginwizard_modify_application.buttonBack}
+                    </button>	
                 </div>                
             </fieldset>
         </form>  
