--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_plugin_description.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_plugin_description.html
@@ -14,6 +14,8 @@
             <fieldset>
                 <h4>#i18n{pluginwizard.pluginwizard_create_plugin_description.pageTitle}</h4>                 
 
+                <#include "errors_handler.html" />
+
                 <input type="hidden" name="page" value="pluginwizard" />                
                 <div class="control-group">
                     <label class="control-label">                         	            	                        
@@ -41,7 +43,7 @@
                <div class="control-group">
                     <label class="control-label" >#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginVersion} : </label>       
                     <div class="controls">
-                        <input class="input-small" type="text" name="version"  value="<#if plugin_model.pluginVersion??>${plugin_model.pluginVersion}</#if>" size="30" />
+                        <input class="input-small" type="text" name="plugin_version"  value="<#if plugin_model.pluginVersion??>${plugin_model.pluginVersion}</#if>" size="30" />
                     </div>                                                                              
                 </div>
 
